web-infras/parser/tests/fixtures/babel/es2015/shorthand/reserved-word-strict/output.txt
[SyntaxError]: Unexpected reserved word. (2,12)
2|var x = ({ implements, interface, package });
 |          ^
[SyntaxError]: Unexpected reserved word. (2,24)
2|var x = ({ implements, interface, package });
 |                      ^
[SyntaxError]: Unexpected reserved word. (2,35)
2|var x = ({ implements, interface, package });
 |                                 ^
